crates/tests/fixtures/harness/data/error/no_matching_ctor/input.rdl

#[winrt]
mod Test {
    attribute FooAttribute { fn(value: u32); }

    #[Foo(1, 2, 3)]
    class MyClass {}
}
        